--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@ span {font-weight: bold;}
 $("thenameplace").ready(
     function() 
     {
-    yourName = prompt("what is your name?");
+    yourName = prompt("What is your name?");
 
       $("#thenameplace").html("This is "+yourName+"'s robot");
     }
