--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 h3, h4 {text-align: center;}
 span {font-weight: bold;}
 </style>
-
+//yourname
 <script type=text/javascript>
 $("thenameplace").ready(
     function() 
