--- a/templates/canvascontroller.html
+++ b/templates/canvascontroller.html
@@ -25,8 +25,10 @@ span {font-weight: bold;}
                     selected = value;
                 }
 		    });
+                console.log("selected = ??")
             if ( selected != "" ){
-                $select.val(selected);
+                $select.val(selected).change();
+                console.log("selected = " + selected)
             }
        });
     }
